--- a/landingPage.html
+++ b/landingPage.html
@@ -21,7 +21,7 @@
         </div>
         <div class="image">
           <img
-            src="https://cdn.profoto.com/cdn/053149e/contentassets/d39349344d004f9b8963df1551f24bf4/profoto-albert-watson-steve-jobs-pinned-image-original.jpg?width=1280&quality=75&format=jpg"
+            src="/img/img.webp"
           />
         </div>
       </div>
